Created 2nd page and updated req

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ streamlit-elements
 streamlit-pandas-profiling
 streamlit-player
 streamlit-quill
+streamlit-elements==0.1.*
 
 # Dependencies
 pandas-profiling
